# whisper-cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  logger.conf  whisper-cli
conf/: test.config
src/: main.c
src/app/: app.c  app.h  app_auth_callbacks.c  app_auth_callbacks.h  app_cli.c  app_cli.h  app_context.c  app_context.h  app_gui_bindings.c  app_gui_bindings.h  main.c
src/app/app/: app.c  main.c
src/gui/: gui.c  gui.h
test/: test.config
