cmake_minimum_required(VERSION 2.8)
set(CMAKE_INSTALL_PREFIX /usr)
set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake")
project(whisper-cli)

execute_process(COMMAND git submodule init)
execute_process(COMMAND git submodule update)
execute_process(COMMAND cmake . WORKING_DIRECTORY whisper-core)
execute_process(COMMAND make . WORKING_DIRECTORY whisper-core)
execute_process(COMMAND sudo make install . WORKING_DIRECTORY whisper-core)
option(RUN_TESTS "Tests" OFF)

if(RUN_TESTS)
  execute_process(COMMAND ./test/run_tests)
endif()

if(DEBUG)
  add_definitions("-g")
endif()

if(PRINT_DEBUG)
  add_definitions("-DDEBUG")
endif()

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  set (CMAKE_CXX_FLAGS "-Wno-pointer-sign")
endif()
file(GLOB SRC "src/**/*.c")
include_directories(src)
add_executable(whisper-cli ${SRC})
install(TARGETS whisper-cli DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
target_link_libraries(whisper-cli -ljnxc -lcrypto -lssl -g -lprotobuf-c -lncurses -lpthread -lwhisper-core)
